--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
                </ol>
                <h3>The Result</h3>
                <p id="testP" class="funParagraph">
-                  VanScan proved to be very effective and saved me a lot of time in my role as a technician. I used VanScan 
-                  for a few months, until Comcast offered a 3rd party solution. The new solution offered more options such as
-                  the ability to receive, lookup status, etc. Because of this, my app was essentially obsolete. However, I 
-                  have already found areas of improvement in the current process, and I believe we could offer a better solution
-                  within Tech360, that would render the current process obsolete. 
+                  VanScan proved to be very effective and saved me a lot of time in my role as a technician. The app caught the 
+                  attention of a national director, and we discussed the possibility of having VanScan uploaded to the internal 
+                  app catalog. I continued to use VanScan for a few months, until Comcast offered a 3rd party solution. 
+                  The new solution offered more options such as the ability to receive, lookup status, etc. Because of this, my 
+                  app was essentially obsolete. However, I have already found areas of improvement in the current process, and I 
+                  believe we could offer a better solution within Tech360, that would render the current process obsolete. 
                </p>
             </article>
             <div id="Screenshots">
